fix(design): fix title bar overlapping
This is temporary while the App component structures gets updated

--- a/src/style/ButtonConfigurator.sass
+++ b/src/style/ButtonConfigurator.sass
@@ -1,6 +1,6 @@
 .button-configurator
 	position: fixed
-	top: 0
+	top: 20px
 	right: 0
 	padding: 0 10px
 	width: 350px
